# tw-stock-quant

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-TW.md  milestone.md  plan.md  pyproject.toml  todo.md  ui_plan.md
data_service/: README.md  cache.py  main.py
data_service/sources/: intraday.py  market.py  stock.py
docs/: thinking.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/market/: route.ts
frontend/src/app/api/market/futures/: route.ts
frontend/src/app/api/market/indices/: route.ts
frontend/src/app/api/market/intraday/: route.ts
frontend/src/app/api/screening/: route.ts
frontend/src/app/market/: page.tsx
frontend/src/app/screening/: page.tsx
frontend/src/app/stock/[ticker]/: page.tsx
frontend/src/components/: market-banner.tsx  market-overview-view.tsx  news-list.tsx  screening-view.tsx  sidebar.tsx  signal-badge.tsx  stat-card.tsx  stock-analysis-view.tsx  theme-provider.tsx
frontend/src/components/charts/: intraday-chart.tsx  kline-chart.tsx
frontend/src/components/market/: futures-card.tsx  global-indices-row.tsx  intraday-section.tsx  news-section.tsx  rankings-section.tsx
frontend/src/components/stock/: chip-tab.tsx  intraday-tab.tsx  news-tab.tsx  order-book.tsx  profile-tab.tsx
frontend/src/lib/: chart-zoom-bound.ts  data-service-client.ts  mock-data.ts  run-python.ts  types.ts  utils.ts
scripts/: dev.sh
src/api/: get_intraday.py  get_market_indices.py  get_orderbook.py  get_stock_data.py  get_stock_profile.py
(+8 files in other folders)
